Using D3.js javascript library to add 3 'cells' and alter their appearance

--- a/static/style.css
+++ b/static/style.css
@@ -1,2 +1,2 @@
 #footer            { font-family: 'Gotham';}
-#content          { font-family: 'Georgia', serif; margin: 0; color: white; background: green; }
+#header          { font-family: 'Georgia', serif; margin: 0; color: white; background: green; }
