--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
     <title>{% block title %}{% endblock %} - Cell Evolution</title>
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
+    <link href="../static/style.css" rel="stylesheet">
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     {% endblock %}
   </head>
