--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,11 @@
     <div id="content">
       {% block header %}<h1 id="header">WELCOME TO CELL EVOLUTION!</h1>{% endblock %}
       {% block content %}
+      <ul>
+        {% for cell in data %}
+          <li>{{ cell.color }}</li>
+        {% endfor %}
+      </ul>
         <svg width="700" height="600"> 
           <circle id="salmonCircle" cx="150" cy="100" r="10"></circle>
           <circle id="salmonCircle" cx="350" cy="100" r="10"></circle>
@@ -26,22 +31,35 @@
           <circle id="blueCircle" cx="550" cy="500" r="10"></circle>
         </svg>
         <script>
-          var circle = d3.selectAll("circle");
+          var data = '{{ data }}';
           
-          d3.json("cells.json", function(error, cells) {
-              circle
-                  .data(cells)
-                  .enter().append("circle")
-                  .style("fill", function(d) { return d.color; })
-          });
+          var svg = d3.select("svg");
+        
+          var circle = svg.selectAll("circle")
+            .data(data)
+            .style("fill", "#0bc97f");//function(d) { return d.color; console.log(d.color); });
           
-          var salmonCircle = d3.selectAll("#salmonCircle");
+          //circle
+            //.enter().append("circle")
+            //.style("fill", "red");
+            //.style("fill", function(d) { return d.color; });
+            
+          svg.selectAll("circle")
+            .data(data)
+            .enter().append("circle")
+            .style("fill", function(d) { return d.color; })
+            .attr("cx", function() { return Math.random() * 680; })
+            .attr("cy", function() { return Math.random() * 580; });
+            
+          circle.exit().remove();
+          
+          //var salmonCircle = d3.selectAll("#salmonCircle");
           //salmonCircle.style("fill", "LightSalmon");
         
-          var purpleCircle = d3.selectAll("#purpleCircle");
+          //var purpleCircle = d3.selectAll("#purpleCircle");
           //purpleCircle.style("fill", "BlueViolet");
           
-          var blueCircle = d3.selectAll("#blueCircle");
+          //var blueCircle = d3.selectAll("#blueCircle");
           //blueCircle.style("fill", "DarkTurquoise");
           
           circle.style("stroke", "black");
